<resources>
    <string name="app_name">BlackJackApp</string>
    <string name="start">start game</string>
    <string name="h_scores">High-scores</string>
    <string name="about">About</string>
    <string name="exit">exit</string>
    <string name="bye">See you!</string>

    <string name="title_activity_game">BlackJack</string>
    <string name="score">SCORE:</string>
    <string name="restart">DEAL</string>
    <string name="ask">HIT</string>
    <string name="stop">STAND</string>
    <string name="value">Your Hand:</string>
    <string name="undo">restart</string>
</resources>
