<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_black_jack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="adrian.embid.blackjackapp.BlackJack"
    android:orientation="vertical">

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_play" />

    <Button
        android:text="@string/h_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_scores" />

    <Button
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about" />

    <Button
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exit" />
</LinearLayout>
