<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="adrian.embid.blackjackapp.Game">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Score"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/undo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_restart" />

        <Button
            android:text="@string/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_deal" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ask"
                android:layout_weight="1" />

            <Button
                android:text="@string/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_stop"
                android:layout_weight="1" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/bank1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="51dp"
                android:layout_marginTop="42dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/bank2"
                android:layout_marginStart="34dp"
                android:layout_alignTop="@+id/bank1"
                android:layout_toEndOf="@+id/bank1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/bank3"
                android:layout_alignTop="@+id/bank2"
                android:layout_toEndOf="@+id/bank2"
                android:layout_marginStart="33dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/bank4"
                android:layout_alignTop="@+id/bank3"
                android:layout_toEndOf="@+id/bank3"
                android:layout_marginStart="34dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/user4"
                android:layout_below="@+id/bank1"
                android:layout_alignStart="@+id/bank1"
                android:layout_marginTop="85dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/user3"
                android:layout_alignTop="@+id/user4"
                android:layout_alignStart="@+id/bank2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/user2"
                android:layout_alignTop="@+id/user3"
                android:layout_alignStart="@+id/bank3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/user1"
                android:layout_alignTop="@+id/user2"
                android:layout_alignStart="@+id/bank4" />
        </RelativeLayout>

        <TextView
            android:text="@string/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/handvalue"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

    </LinearLayout>

</FrameLayout>
